api config done
